public/stylesheets/post_edit.sass
@import 'base'

.post
  margin: 20px auto 0 auto
  @include border-radius(15px)
  @include clear_fix
  border: 1px solid $pink
  background: $almost-white
  padding: 0 20px

  a
    font-size: 12px
    color: #36C
  .left
    float: left
    width: 620px
    padding: 0 20px 0 0
    border-right: 1px dashed #CADBEA
    position: relative
  .right
    width: 190px
    float: right
    padding-top: 35px
    h2
      font-family: $font-main
      font-size: 18px
      line-height: 18px
      color: #68879F
      margin: 20px 0 10px 0

  h1
    @include heading

  label
    color: gray

  .option_text,
  .add_textarea
    display: block
    margin:
      top: -20px
      bottom: 30px

  .option_text
    padding-bottom: 25px

  .rich_editor_starter,
  .text_editor_starter,
  .new_title_starter
    width: 100px

  .rich_editor_starter,
  .text_editor_starter
    float: right
  .text_editor_starter
    display: none
  .textarea_starter,
  .textarea_closer
    float: left
    width: 200px
    display: block
    line-height: 45px

  .new_title_starter
    float: left


  .file-invalid
    cursor: pointer
    color: #514721
    padding-left: 48px
    line-height: 24px
    height: 60px
    background: url(/images/error.png) no-repeat 24px 5px
    margin-bottom: 1px

  .list_image
    clear: both
    width: 600px
    padding: 5px 0 5px 20px
    font-size: 20px
    height: 75px
    line-height: 75px
    @include border-radius(8px)
    border: 0
    background: #fff
    margin-bottom: 10px	

    .file
      font-size: 12px
      .file-title
      .file-size
      img.file-progress
        display: block
        float: left
        margin: 10px 5px
        width: 125px
        height: 12px
        vertical-align: middle
        background-image: url(/images/progress-bar/progress.gif)
      .file-size
        color: #666
        padding-left: 12px
      .file-error
        font-size: 12px
        padding: 2px
      .file-retry
        font-size: 12px
        cursor: pointer

    div
      float: left

    .the_drag_handle
      width: 14px
      height: 14px
      margin-top: 30px
      margin-right: 20px
      background: url('/images/icons.gif') -120px -20px
      overflow: hidden
      cursor: move

    .the_image
      margin-top: 6px
      width: 60px
      height: 60px
      border: 1px solid gray

    .the_text
      width: 420px
      padding: 0px 20px
      margin-top: 20px	

      input
        @include border-radius(8px)
        padding-left: 5px
        width: 420px
        height: 32px
        border: 1px solid #CADBEA
        font-size: 20px
        line-height: 32px
      span
        line-height: 32px

    .the_close
      width: 14px
      height: 14px
      margin-top: 28px
      background: url('/images/icons.gif') -100px -20px
      overflow: hidden
      cursor: pointer

  .text,
  .title_text,
  .url_link,
  .title_link
    clear: both
    width: 620px
    padding: 5px 0
    font-size: $input-font-size
    height: $input-height - 10px
    line-height: $input-height - 10px
    @include border-radius(8px)
    border: 1px solid #cadbea
    background: white
    margin-bottom: 10px

    label
      padding-left: 20px
      color: gray

  .rich_text
    padding: 0px

  .title_text input,
  .url_link input,
  .title_link input
    border: 0
    height: $input-height - 10px
    line-height: $input-height -10px
    font-size: $input-font-size
    width: 420px

  .video.title_text
    margin-bottom: 0
    input
      margin-left: 25px        
  .video.slight
    margin-bottom: 10px
    display: block
     
  
  .text
    height: 340px

  .text textarea
    border: 0
    @include size(600px, 340px)
    font-size: $input-font-size
    line-height: 1.5
    padding: 0 0 0 20px

  .operation
    height: 44px
    margin-bottom: 60px

  .page_selector
    width: 195px

  .cancel
    float: right
    border: 0
    display:block
    width: 100px
    padding-right: 10px
    text-align: right
    line-height: 45px
    

  .send, .save
    input
      @include big_button
      @include hide_text
      overflow: hidden
      display: block
      border: 0
      float: right

  .send
    input
      background: url('/images/post_send.gif')

  .save
    input
      background: url('/images/post_save.gif')

  .post_error
    font-size: 12px
    color: red
    font-weight: blod
    padding-left: 10px

  .file_image,
  .url_image
    clear: both
    width: 600px
    padding: 5px 0 5px 20px
    height: 55px
    border: 0
    background: #fff
    margin-bottom: 10px
    overflow: hidden
    @include border-radius(8px)
    .img_left,
    .img_right
      width: 480px
      overflow: hidden
      a
        font-size: 12px
        line-height: 45px
      .desc
        color: #808080
        background: none
        line-height: 16px
        display: block
        font-size: 12px
        a
          line-height: 16px
          color: #808080
          text-decoration: underline
        
    .img_left
      float: left
      padding-top: 5px
      label
        padding-left: 0

    .img_right
      width: 90px
      float: right

  .file_image
    font-size: 12px
    line-height: 35px
    .img_left
      padding-top: 10px
    a
      padding-right: 0

  .url_image
    font-size: 20px
    line-height: 5px
    .url_uploader
      border: 1px solid #CADBEA
      border-right: 0
      margin: 0
      padding: 0
      @include border-radius(8px)
      display: inline-block
      height: 30px
      width: 440px
      _height: 28px
      input
        margin-left: 20px
        border: 0
        height: 28px
        line-height: 28px
        font-size: 20px
        width: 280px
        color: #808080
        float: left
        display: inline
      .url_uploader_btn
        display:  inline-block
        width: 130px
        cursor: pointer
        line-height: 30px
        vertical-align: top
        height: 30px
        background-color: #36c
        color: #fff
        text-align: center
        -webkit-border-top-right-radius: 8px
        -webkit-border-bottom-right-radius: 8px
        -moz-border-radius-topright: 8px
        -moz-border-radius-bottomright: 8px
        border-top-right-radius: 8px
        border-bottom-right-radius: 8px
        float: right
        display: inline
        margin-right: -5px


.my_pages
  $selector-width = 186px
  $selector-padding = 10px
  $selector-inner = $selector-width - 2 * $selector-padding

  select
    font-size: 18px
    width: 186px

  a
    text-decoration: none
    color: $light-gray

  .selector_open
    width: $selector-width
    font-size: 14px
    font-weight: bold
    overflow: hidden
    color: $gray

  .selector_open_head
    background: url('/images/mypages_open1.png')
    @include size($selector-inner, 14px)
    padding: 5px $selector-padding
    overflow: hidden

  .selector_open_menu
    width: $selector-inner
    background: url('/images/mypages_open2.png') repeat-y
    padding: 0 $selector-padding
    line-height: 24px

  .selector_open_footer
    @include size($selector-width, 15px)
    background: url('/images/mypages_open3.png')

  .selector
    display: block
    @include size(148px, 34px)
    cursor: pointer
    line-height: 34px
    font:
      weight: bold
      size: 14px
    padding:
      left: 10px
      right: 28px
    overflow: hidden
    color: $gray

  div.selector
    background: url("/images/mypages_close.png")

  a.selector
    background: url("/images/mypages_close_a.gif")
    color: $gray
    &:hover
      background: url('images/mypages_close.png')

.fetch_list
  height: 300px
  width: 200px
  overflow-y: auto
  img
    height: 60px
    width: 60px
    cursor: pointer

.empty_message
  display: none

.empty
  *
    display: none

  .empty_message
    display: block

  .search_key
    display: inline

embed.player
  display: inline

input#song_id
  padding-left: 0.5em
  width: 610px

#songCmplPrompt
  position: absolute
  z-index: 1
  top: 133px
  *top: 112px
  color: #68879F
  font-size: 14px
  line-height: 2
  background: white
  border: 1px solid #cadbea
  padding: 10px 10px 0px 10px
  border-top: 0
  width: 600px
  _width: 626px
  @include border_radius(0 0 10px 10px)

.song_list
  padding: 0
  margin: 0

  .song_item
    @include clear_fix
    height: 30px
    cursor: pointer

  .hover
    background: #cadbea

  .song_name, .artist_name
    display: inline
    padding: 0
    margin: 0

  .song_name
    width: 400px
    float: left

  .artist_name
    text-align: center
    width: 200px
    float: right

.summary
  @include clear_fix

  .song_name
    width: 400px
    float: left

  .artist_name
    text-align: center
    width: 200px
    float: right

